syntax = "proto3";

option java_package = "tukano.impl.grpc.generated_java";
option java_outer_classname = "BlobsProtoBuf";

service Blobs {

	rpc upload( UploadArgs ) returns (UploadResult) {}

	rpc download( DownloadArgs ) returns (stream DownloadResult) {}
	
	rpc deleteBlob( DeleteBlobArgs ) returns (DeleteBlobResult) {}
	
	rpc getNumberBlobs( GetNumberBlobsArgs ) returns (GetNumberBlobsResult) {}
	
}

message UploadArgs {
	 string blobId = 1;
	 bytes data = 2;
}

message UploadResult {
}

message DownloadArgs {
	 string blobId = 1;
}

message DownloadResult {
	bytes chunk = 1;
}

message DeleteBlobArgs {
    string blobId = 1;
}

message DeleteBlobResult {
}

message GetNumberBlobsArgs {
}

message GetNumberBlobsResult {
	int32 count = 1;
}